--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Seong Woon Park</h1>
-    <img src="./assets/박성웅 6560 사본 2.jpg" heigh="200" width="150"/>
+    <img src="./assets/seongwoonpark.jpg" heigh="200" width="150"/>
     <h2>Summary</h2>
     <p>I am a problem solver. I enjoy any form of problem that I encounter. I am never complacent with success. I learn from my failure. If I am given a responsibility, I dedicate myself to it.</p>
     <hr />
